# histoire

./: Cargo.toml  README.md
src/: cli.rs  db.rs  git_ops.rs  main.rs  scan.rs  skill.rs  skill_template.md
src/db/: blame.rs  commits.rs  file_events.rs  lineage.rs  mod.rs  repositories.rs  scan.rs  scans.rs  schema.sql  types.rs
src/scan/: mod.rs  plan.rs  scanner.rs
