[package]
name = "histoire"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.6.1", features = ["derive"] }
git2 = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
